--- a/main.css
+++ b/main.css
@@ -32,3 +32,8 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+._items {
+    display: flex;
+    gap: 1rem;
+}
